--- a/NetCoreCMS.Web/Views/Home/Index.cshtml
+++ b/NetCoreCMS.Web/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "NetCore CMS Settings Home";
+    Layout = null;
 }
 
 <div class="row">
-   
+   <h1>Net Core CMS</h1>
+    <hr/>
+    Please configure <a href="/Admin/Startup">Startup</a>. Set Default url /CmsHome
 </div>
