email Settings save completed.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/EmailSettings.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/EmailSettings.cshtml
@@ -7,48 +7,61 @@
     Layout = Constants.AdminLayoutName;
     ViewData["PageTitle"] = "Email Settings";
     ViewData["PageSubtitle"] = "Set Email SMTP Settings";
+    var isChecked = "false";
+    var checkedTxt = "";
+    if (Model.UseSSL)
+    {
+        isChecked = "true";
+        checkedTxt = "checked";
+    }
+
 }
 
 <div class="row">
     <div class="col-sm-12">
-        <form class="form-horizontal" asp-controller="Admin" asp-action="Startup" method="post">
-            
+        <form class="form-horizontal" asp-controller="Admin" asp-action="EmailSettings" method="post">
             <div class="form-group">
-                <label>Host Address: </label>
-                <input type="text" name="Host" value="" />
+                <div asp-validation-summary="All" class="text-danger"></div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-3 text-right"><label>Host Address: </label></div>
+                <div class="col-sm-5"><input type="text" asp-for="Host" value="@Model.Host" class="form-control"/></div>
             </div>
 
             <div class="form-group">
-                <label>Port: </label>
-                <input type="text" name="Port" value="" />
-            </div>
-            
-            <div class="form-group">
-                <label>User Name: </label>
-                <input type="text" name="UserName" value="" />
+                <div class="col-sm-3 text-right"><label>Port: </label></div>
+                <div class="col-sm-5"><input type="text" asp-for="Port" value="@Model.Port"  class="form-control" /></div>
             </div>
             
             <div class="form-group">
-                <label>Password: </label>
-                <input type="text" name="Password" value="" />
+                <div class="col-sm-3 text-right"><label>User Name: </label></div>
+                <div class="col-sm-5"><input type="text" asp-for="UserName" value="@Model.UserName" class="form-control"  /></div>
+            </div>
+            
+            <div class="form-group">
+                <div class="col-sm-3 text-right"><label>Password: </label></div>
+                <div class="col-sm-5"><input type="password" asp-for="Password" value="@Model.Password"  class="form-control" /></div>
             </div>
 
             <div class="form-group">
-                <label>Use SSL: </label>
-                <input type="checkbox" name="UseSSL" />                
+                <div class="col-sm-3 text-right"><label>Use SSL: </label></div>
+                <div class="col-sm-5"><input asp-for="UseSSL" type="checkbox" value="@isChecked" @checkedTxt /> </div>
             </div>
 
-            <div>
-                <label>From Name:</label>
-                <input type="text" name="FromName" value="" />
+            <div class="form-group">
+                <div class="col-sm-3 text-right"><label>From Name:</label></div>
+                <div class="col-sm-5"><input type="text" asp-for="FromName" value="@Model.FromName" class="form-control" /></div>
             </div>
 
-            <div>
-                <label>From Email:</label>
-                <input type="text" name="FromEmail" value="" />
+            <div class="form-group">
+                <div class="col-sm-3 text-right"><label>From Email:</label></div>
+                <div class="col-sm-5"><input type="text" asp-for="FromEmail" value="@Model.FromEmail" class="form-control"/></div>
             </div>
-
-            <input class="btn btn-primary" type="submit" value="Update" />
+            <div class="form-group">
+                <div class="col-sm-3 text-right">  </div>
+                <input class="btn btn-primary" type="submit" value="Update" />
+            </div>
+            
         </form>
     </div>    
 </div>
