--- a/NetCoreCMS.Web/Views/Shared/_AdminLoginPartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLoginPartial.cshtml
@@ -12,7 +12,7 @@
             <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a asp-area="" asp-controller="CmsHome" asp-action="Index" target="_blank" title="Fontend">
+                        <a asp-area="" asp-controller="Home" asp-action="Index" target="_blank" title="Fontend">
                             <i class="fa fa-share fa-fw"></i>
                         </a>
                     </li>
