--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Upload.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Upload.cshtml
@@ -14,7 +14,7 @@
 @if(ViewBag.UploadPath!="")
 {
     <div style="width:100%; text-align:center;">
-        <a asp-controller="CmsMedia" asp-action="Index" asp-route-isFile="@ViewBag.IsFile" asp-route-sq="@ViewBag.UploadPath" class="btn btn-outline btn-info">Go to upload dir</a> 
+        <a asp-controller="MediaHome" asp-action="Index" asp-route-isFile="@ViewBag.IsFile" asp-route-sq="@ViewBag.UploadPath" class="btn btn-outline btn-info">Go to upload dir</a> 
     </div>
     <br />
 }
@@ -23,10 +23,10 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 @ViewData["PageSubtitle"]
-                <div class="pull-right"><a asp-controller="CmsMedia" asp-action="Index" asp-route-isFile="@ViewBag.IsFile" class="btn btn-outline btn-primary btn-xs">Manage</a></div>
+                <div class="pull-right"><a asp-controller="MediaHome" asp-action="Index" asp-route-isFile="@ViewBag.IsFile" class="btn btn-outline btn-primary btn-xs">Manage</a></div>
             </div>
             <div class="panel-body">
-                <form method="post" asp-action="Upload" asp-controller="CmsMedia" enctype="multipart/form-data">
+                <form method="post" asp-action="Upload" asp-controller="MediaHome" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="col-md-2"><label>File type : </label></div>
