All Log file download is completed.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Logging.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Logging.cshtml
@@ -28,7 +28,7 @@
                         <label>Download all logs: </label>
                     </div>
                     <div class="col-sm-5">
-                        <a href="/Admin/DownloadLog">Download All Log File</a>
+                        <a href="/Admin/DownloadAllLogs">Download All Log File</a>
                     </div>
                 </div>
             </div>
