--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -384,7 +384,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 copyright"> Copyrights &copy; @Html.Raw(ViewBag.WebSite.Copyrights) @DateTime.Now.Year</div>
-                    <div class="col-md-6 poweredby"> Powered by <a href="#" target="_blank">NetCoreCMS</a></div>
+                    <div class="col-md-6 poweredby"> Developed using <a href="@NccInfo.Website" target="_blank">NetCoreCMS</a></div>
                 </div>
             </div>
         </footer>
