--- a/NetCoreCMS.Web/Themes/Default/Shared/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 
+@using NetCoreCMS.Framework.Core
 @using NetCoreCMS.Core.Modules.Cms
 @using NetCoreCMS.Core.Modules.Cms.Models
 @using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
