--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/ManageAccount/ChangePassword.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/ManageAccount/ChangePassword.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewData["Title"].</h2>
 
-<form asp-controller="Manage" asp-action="ChangePassword" method="post" class="form-horizontal">
+<form asp-controller="ManageAccount" asp-action="ChangePassword" method="post" class="form-horizontal">
     <h4>Change Password Form</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
