Blog index page

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/CreateEdit.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/CreateEdit.cshtml
@@ -199,7 +199,7 @@
                     { name: 'colors', items: ['TextColor', 'BGColor'] },
                     { name: 'insert1', items: ['HorizontalRule', 'Smiley'] },
                     { name: 'insert2', items: ['SpecialChar', 'PageBreak'] },
-                    { name: 'tools', items: [/*'Maximize', */'ShowBlocks'] }
+                    { name: 'tools', items: ['Maximize', 'ShowBlocks'] }
                 ],
             });
 
