--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsWidget/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsWidget/Index.cshtml
@@ -19,20 +19,23 @@
                     {
                         if (item.Widgets.Count > 0)
                         {
-                            <div class="col-lg-6">
+                            <div class="col-md-6">
                                 <div class="panel panel-primary">
                                     <div class="panel-heading">@item.ModuleTitle</div>
-                                    <div data-module-id="@item.ModuleId"  class="panel-body"  ondrop="dropBack(event)" ondragover="allowDrop(event)">
+                                    <div id="Container_@item.ModuleId" data-module-id="@item.ModuleId"  class="panel-body"  ondrop="dropBack(event)" ondragover="allowDrop(event)">
                                         @foreach (IWidget widget in item.Widgets)
-                                        {
-                                            <div id="SRC_@widget.WidgetId" data-widget-id="@widget.WidgetId" data-module-id="@item.ModuleId" class="panel panel-default" draggable="true" ondragstart="drag(event)" >
+                                        {                                            
+                                            <div id="SRC_@widget.WidgetId" data-widget-id="@widget.WidgetId" data-module-id="@item.ModuleId" class="panel panel-default" draggable="true" ondragstart="drag(event)">
                                                 <div class="panel-heading">
-                                                    <i class="glyphicon glyphicon-move margin-right-10"></i>&nbsp;@widget.Title
+                                                    <i class="glyphicon glyphicon-move margin-right-10"></i>&nbsp;
+                                                    <a data-toggle="collapse" href="#collapse_@widget.WidgetId.Replace('.', '_')">@widget.Title</a>
                                                 </div>
-                                                <div class="panel-body">
-                                                     @widget.Description
+                                                <div id="collapse_@widget.WidgetId.Replace('.', '_')" class="panel-collapse collapse">
+                                                    <div class="panel-body">
+                                                        @widget.Description
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </div>                                            
                                         }
                                     </div>
                                 </div>
@@ -98,10 +101,13 @@
                                                     if (w != null) {
                                                         <div id="@wZone.Id" data-widget-id="@wZone.WidgetId" data-module-id="@wZone.ModuleId" data-theme-id="@wZone.ThemeId"  data-layout-name="@wZone.LayoutName" data-layout-zone="@wZone.Zone" class="panel panel-default" draggable="true" ondragstart="drag(event)" >
                                                         <div class="panel-heading">
-                                                            <i class="glyphicon glyphicon-move margin-right-10"></i>&nbsp;@w.Title
+                                                            <i class="glyphicon glyphicon-move margin-right-10"></i>&nbsp;
+                                                            <a data-toggle="collapse" href="#collapse_@wZone.Id">@w.Title</a>
                                                         </div>
-                                                        <div class="panel-body">
-                                                             @w.Description
+                                                        <div id="collapse_@wZone.Id" class="panel-collapse collapse">
+                                                            <div class="panel-body">
+                                                                 @w.Description
+                                                            </div>
                                                         </div>
                                                     </div>
                                                     }
@@ -132,12 +138,15 @@
     }
 
     function drop(ev) {
-
+        console.log("Drop");
         ev.preventDefault();
         var targetDiv = ev.target;
         var divId = ev.dataTransfer.getData("widgetId");
         var div = document.getElementById(divId);
         targetDiv.appendChild(div);
+        //var div1 = document.getElementById(divId);
+        //var destinationDiv = document.getElementById("Container_" + $(div1).attr("data-module-id"));
+        //destinationDiv.appendChild(div1);
         var moduleId = $(div).attr("data-module-id");
         var zone = $(targetDiv).attr("data-layout-zone");
         var layout = $(targetDiv).attr("data-layout-name");
@@ -183,7 +192,7 @@
     }
 
     function dropBack(ev) {
-
+        console.log("Drop back");
         ev.preventDefault();
         var targetDiv = ev.target;
         var divId = ev.dataTransfer.getData("widgetId");
