--- a/NetCoreCMS.Web/Views/Home/Index.cshtml
+++ b/NetCoreCMS.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "NetCore CMS Settings Home";
-    Layout = null;
+    Layout = "_SimpleLayout";
 }
 
 <div class="row">
