--- a/NetCoreCMS.Web/Views/Home/RestartHost.cshtml
+++ b/NetCoreCMS.Web/Views/Home/RestartHost.cshtml
@@ -1,64 +1,28 @@
 ﻿@{
-    Layout = null;
-}
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Restart</title>
-
-    <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
-
-    <environment names="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment names="Staging,Production">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
-</head>
+    ViewData["Title"] = "Restart";
+    Layout = "_SimpleLayout";
+}    
 
 
+<div class="page-header text-center">
+    <h1>NetCoreCMS is Restarting</h1>
+    <hr />
+    <h2 id="showText" >Please wait</h2>     
+</div>       
+ 
+<script>
+// Set the date we're counting down to
+var count = 5;
 
-<body>
-
-    <!-- Begin page content -->
-    <div class="container">
-        <div class="page-header text-center">
-            <h1>NetCoreCMS is Restarting</h1>
-            <hr />
-            <h2>Please wait</h2> 
-            <a href="/">Home</a>
-        </div>       
-        
-    </div>
-
-    <footer class="footer">
-        <div class="container">
-            <p class="text-muted text-center">Developed by <a href="@NccInfo.Website" title="@NccInfo.Author" target="_blank">@NccInfo.Author</a>.</p>
-        </div>
-    </footer>
-</body>
-</html>
+// Update the count down every 1 second
+var x = setInterval(function() {    
+    if (count <= 0) {
+        document.getElementById("showText").innerHTML = "Go <a href='/' >Home</a> Now";
+        window.location.replace("/");
+    }
+    else {
+        document.getElementById("showText").innerText = "Please wait " + count + " second";
+        count--;
+    }
+}, 1000);
+</script>
